--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,37 +1,42 @@
-/* line 4, ../compass/sass/style.scss */
+/* line 3, ../compass/sass/style.scss */
+.A {
+  border-bottom: 1px solid black;
+}
+
+/* line 6, ../compass/sass/style.scss */
 #image {
   width: 100%;
 }
 
-/* line 7, ../compass/sass/style.scss */
+/* line 9, ../compass/sass/style.scss */
 #view-box {
   background-color: #999;
 }
 
-/* line 10, ../compass/sass/style.scss */
+/* line 12, ../compass/sass/style.scss */
 #video-queue {
   margin-top: 5%;
 }
-/* line 14, ../compass/sass/style.scss */
+/* line 16, ../compass/sass/style.scss */
 #video-queue .queue-text {
   font-size: 8px;
 }
 
-/* line 20, ../compass/sass/style.scss */
+/* line 22, ../compass/sass/style.scss */
 #video-box iframe {
   padding-bottom: 5%;
 }
 
-/* line 25, ../compass/sass/style.scss */
+/* line 27, ../compass/sass/style.scss */
 .C {
   background-color: #999;
 }
 
-/* line 31, ../compass/sass/style.scss */
+/* line 33, ../compass/sass/style.scss */
 #ad-window {
   background-color: #bbb;
 }
-/* line 33, ../compass/sass/style.scss */
+/* line 35, ../compass/sass/style.scss */
 #ad-window img {
   width: 100%;
 }
