--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,40 +3,60 @@
   border-bottom: 1px solid black;
 }
 
-/* line 6, ../compass/sass/style.scss */
+/* line 9, ../compass/sass/style.scss */
+.B #prof-pic img {
+  width: 100%;
+}
+
+/* line 14, ../compass/sass/style.scss */
+#prof-info {
+  font-size: 10px;
+}
+
+/* line 17, ../compass/sass/style.scss */
 #image {
   width: 100%;
 }
 
-/* line 9, ../compass/sass/style.scss */
+/* line 20, ../compass/sass/style.scss */
+#profile {
+  border: 1px solid black;
+}
+
+/* line 23, ../compass/sass/style.scss */
 #view-box {
   background-color: #999;
 }
 
-/* line 12, ../compass/sass/style.scss */
+/* line 26, ../compass/sass/style.scss */
 #video-queue {
   margin-top: 5%;
 }
-/* line 16, ../compass/sass/style.scss */
+/* line 30, ../compass/sass/style.scss */
 #video-queue .queue-text {
   font-size: 8px;
 }
 
-/* line 22, ../compass/sass/style.scss */
+/* line 36, ../compass/sass/style.scss */
 #video-box iframe {
   padding-bottom: 5%;
 }
 
-/* line 27, ../compass/sass/style.scss */
+/* line 41, ../compass/sass/style.scss */
 .C {
   background-color: #999;
 }
 
-/* line 33, ../compass/sass/style.scss */
+/* line 47, ../compass/sass/style.scss */
 #ad-window {
   background-color: #bbb;
 }
-/* line 35, ../compass/sass/style.scss */
+/* line 49, ../compass/sass/style.scss */
 #ad-window img {
   width: 100%;
+}
+
+/* line 54, ../compass/sass/style.scss */
+.vid-item {
+  margin: 2%;
 }
