--- a/assets/compass/sass/style.scss
+++ b/assets/compass/sass/style.scss
@@ -1,7 +1,14 @@
 $gray: #999;
-$lt-gray: #bbb;
+$lt-gray: #ddd;
 .A{
 	border-bottom: 1px solid black;
+	.search-bar{
+		margin-top:10%;
+		width:70%;
+	}
+	.links{
+		margin-top:3%;
+	}
 }
 .B{
 
@@ -19,6 +26,7 @@ $lt-gray: #bbb;
 }
 #profile{
 	border: 1px solid black;
+	margin-bottom:2%;
 }
 #view-box{
 	background-color: $gray;
@@ -39,7 +47,7 @@ $lt-gray: #bbb;
 
 }
 .C{
-	background-color: $gray;
+	background-color: $lt-gray;
 	img{
 
 	}
@@ -52,9 +60,11 @@ $lt-gray: #bbb;
 }
 
 .vid-item{
-	margin:2%;
+	padding:2%;
 }
-
+#gap1, #gap2{
+	height:25px;
+}
 
 
 
