--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,77 +1,159 @@
-/* line 3, ../compass/sass/style.scss */
+/* line 4, ../compass/sass/style.scss */
 .A {
   border-bottom: 1px solid black;
 }
-/* line 5, ../compass/sass/style.scss */
+/* line 6, ../compass/sass/style.scss */
 .A .search-bar {
   margin-top: 10%;
   width: 70%;
 }
-/* line 9, ../compass/sass/style.scss */
+/* line 10, ../compass/sass/style.scss */
 .A .links {
   margin-top: 3%;
 }
+/* line 13, ../compass/sass/style.scss */
+.A .row {
+  text-align: center;
+}
+/* line 15, ../compass/sass/style.scss */
+.A .row span {
+  margin: 0px 8%;
+}
+/* line 19, ../compass/sass/style.scss */
+.A .row.two {
+  margin-bottom: 2%;
+}
 
-/* line 16, ../compass/sass/style.scss */
+/* line 27, ../compass/sass/style.scss */
 .B #prof-pic img {
   width: 100%;
 }
+/* line 32, ../compass/sass/style.scss */
+.B .row #comment-section {
+  padding-left: 0px;
+}
+/* line 35, ../compass/sass/style.scss */
+.B .row #comment-section #comment-header {
+  padding-left: 0px;
+}
+/* line 39, ../compass/sass/style.scss */
+.B .row #comment-section #comment1, .B .row #comment-section #comment2 {
+  padding-left: 0;
+}
+/* line 41, ../compass/sass/style.scss */
+.B .row #comment-section #comment1 .user, .B .row #comment-section #comment2 .user {
+  margin-bottom: 2.5%;
+  padding-left: 0px;
+}
 
-/* line 21, ../compass/sass/style.scss */
+/* line 54, ../compass/sass/style.scss */
+#more-videos .thumb {
+  margin: 2.5% 0%;
+}
+/* line 57, ../compass/sass/style.scss */
+#more-videos .info {
+  padding: 3%;
+  font-size: 10px;
+}
+
+/* line 62, ../compass/sass/style.scss */
 #prof-info {
   font-size: 10px;
 }
 
-/* line 24, ../compass/sass/style.scss */
+/* line 65, ../compass/sass/style.scss */
 #image {
   width: 100%;
 }
 
-/* line 27, ../compass/sass/style.scss */
+/* line 68, ../compass/sass/style.scss */
 #profile {
   border: 1px solid black;
   margin-bottom: 2%;
 }
-
-/* line 31, ../compass/sass/style.scss */
-#view-box {
-  background-color: #999;
+/* line 71, ../compass/sass/style.scss */
+#profile #prof-pic {
+  padding: 0;
+}
+/* line 75, ../compass/sass/style.scss */
+#profile #prof-pic img {
+  width: 100%;
+  margin-left: 15%;
+}
+/* line 81, ../compass/sass/style.scss */
+#profile #name {
+  margin-top: 4%;
+}
+/* line 84, ../compass/sass/style.scss */
+#profile #subscribebtn {
+  margin: 8% 2% 0% 8%;
 }
 
-/* line 34, ../compass/sass/style.scss */
+/* line 90, ../compass/sass/style.scss */
+#view-box {
+  background-color: #999;
+  padding-bottom: 15px;
+}
+
+/* line 94, ../compass/sass/style.scss */
 #video-queue {
   margin-top: 5%;
 }
-/* line 38, ../compass/sass/style.scss */
+/* line 98, ../compass/sass/style.scss */
 #video-queue .queue-text {
   font-size: 8px;
 }
 
-/* line 44, ../compass/sass/style.scss */
+/* line 102, ../compass/sass/style.scss */
+#video-box {
+  padding-left: 0px;
+}
+/* line 104, ../compass/sass/style.scss */
 #video-box iframe {
-  padding-bottom: 5%;
+  padding-bottom: 1%;
+}
+/* line 107, ../compass/sass/style.scss */
+#video-box #views {
+  text-align: right;
+  padding-right: 0;
+  padding-top: 7.5%;
+}
+/* line 112, ../compass/sass/style.scss */
+#video-box .glyphicon {
+  font-size: 30px;
+  top: 9px;
+}
+/* line 116, ../compass/sass/style.scss */
+#video-box .atag {
+  padding: 0px 15px 10px;
 }
 
-/* line 49, ../compass/sass/style.scss */
+/* line 121, ../compass/sass/style.scss */
 .C {
   background-color: #ddd;
 }
+/* line 123, ../compass/sass/style.scss */
+.C .row {
+  margin-bottom: 2.5%;
+}
 
-/* line 55, ../compass/sass/style.scss */
+/* line 127, ../compass/sass/style.scss */
 #ad-window {
   background-color: #ddd;
+  height: 408px;
 }
-/* line 57, ../compass/sass/style.scss */
+/* line 130, ../compass/sass/style.scss */
 #ad-window img {
   width: 100%;
+  margin-top: 20px;
 }
 
-/* line 62, ../compass/sass/style.scss */
+/* line 136, ../compass/sass/style.scss */
 .vid-item {
   padding: 2%;
 }
 
-/* line 65, ../compass/sass/style.scss */
+/* line 139, ../compass/sass/style.scss */
 #gap1, #gap2 {
   height: 25px;
 }
