--- a/assets/compass/sass/style.scss
+++ b/assets/compass/sass/style.scss
@@ -1,6 +1,6 @@
 $gray: #999;
 $lt-gray: #ddd;
-
+$blue: #009;
 .A{
 	border-bottom: 1px solid black;
 	.search-bar{
@@ -139,7 +139,16 @@ $lt-gray: #ddd;
 #gap1, #gap2{
 	height:25px;
 }
-
-
+.active{
+	padding-bottom: 2px;
+	border-bottom:1px solid $blue;
+}
+a{
+	color: $blue;
+}
+a:hover{
+	text-decoration: none;
+	color: $blue;
+}
 
 
