--- a/assets/compass/sass/style.scss
+++ b/assets/compass/sass/style.scss
@@ -12,12 +12,16 @@ $blue: #009;
 	}
 	.row{
 		text-align: center;
+		#youtube{
+			margin-bottom: -4%;
+		}
 		span{
 			margin:0px 8%;
 		}
 	}
 	.row.two{
 		margin-bottom:2%;
+		margin-top: 1.5%;
 		}
 	
 }
@@ -91,7 +95,7 @@ $blue: #009;
 #view-box{
 	background-color: $gray;
 	padding-bottom:15px;
-
+}
 #video-queue{
 	margin-top:5%;
 
@@ -127,7 +131,9 @@ $blue: #009;
 }
 #ad-window{
 	background-color: $lt-gray;
-	height:408px;
+	height:418px;
+	margin-left: 5%;
+	width: 28%;
 	img{
 		width:100%;
 		margin-top:20px;
