--- a/assets/compass/sass/style.scss
+++ b/assets/compass/sass/style.scss
@@ -97,11 +97,18 @@ $blue: #009;
 	padding-bottom:15px;
 }
 #video-queue{
-	margin-top:5%;
+	margin-top:0%;
 
-
+	img{
+		width:60%;
+		height:100%;
+	}
 	.queue-text{
-		font-size:8px;
+		font-size:12px;
+		padding:5% 0%;
+		.title{
+			margin-top: 5%;
+		}	
 	}
 }
 #video-box{
