--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,81 +107,91 @@
 
 /* line 99, ../compass/sass/style.scss */
 #video-queue {
+  margin-top: 0%;
+}
+/* line 102, ../compass/sass/style.scss */
+#video-queue img {
+  width: 60%;
+  height: 100%;
+}
+/* line 106, ../compass/sass/style.scss */
+#video-queue .queue-text {
+  font-size: 12px;
+  padding: 5% 0%;
+}
+/* line 109, ../compass/sass/style.scss */
+#video-queue .queue-text .title {
   margin-top: 5%;
 }
-/* line 103, ../compass/sass/style.scss */
-#video-queue .queue-text {
-  font-size: 8px;
-}
 
-/* line 107, ../compass/sass/style.scss */
+/* line 114, ../compass/sass/style.scss */
 #video-box {
   padding-left: 0px;
 }
-/* line 109, ../compass/sass/style.scss */
+/* line 116, ../compass/sass/style.scss */
 #video-box iframe {
   padding-bottom: 1%;
 }
-/* line 112, ../compass/sass/style.scss */
+/* line 119, ../compass/sass/style.scss */
 #video-box #views {
   text-align: right;
   padding-right: 0;
   padding-top: 7.5%;
 }
-/* line 117, ../compass/sass/style.scss */
+/* line 124, ../compass/sass/style.scss */
 #video-box .glyphicon {
   font-size: 30px;
   top: 9px;
 }
-/* line 121, ../compass/sass/style.scss */
+/* line 128, ../compass/sass/style.scss */
 #video-box .atag {
   padding: 0px 15px 10px;
 }
 
-/* line 126, ../compass/sass/style.scss */
+/* line 133, ../compass/sass/style.scss */
 .C {
   background-color: #ddd;
 }
-/* line 128, ../compass/sass/style.scss */
+/* line 135, ../compass/sass/style.scss */
 .C .row {
   margin-bottom: 2.5%;
 }
 
-/* line 132, ../compass/sass/style.scss */
+/* line 139, ../compass/sass/style.scss */
 #ad-window {
   background-color: #ddd;
   height: 418px;
   margin-left: 5%;
   width: 28%;
 }
-/* line 137, ../compass/sass/style.scss */
+/* line 144, ../compass/sass/style.scss */
 #ad-window img {
   width: 100%;
   margin-top: 20px;
 }
 
-/* line 143, ../compass/sass/style.scss */
+/* line 150, ../compass/sass/style.scss */
 .vid-item {
   padding: 2%;
 }
 
-/* line 146, ../compass/sass/style.scss */
+/* line 153, ../compass/sass/style.scss */
 #gap1, #gap2 {
   height: 25px;
 }
 
-/* line 149, ../compass/sass/style.scss */
+/* line 156, ../compass/sass/style.scss */
 .active {
   padding-bottom: 2px;
   border-bottom: 1px solid #009;
 }
 
-/* line 153, ../compass/sass/style.scss */
+/* line 160, ../compass/sass/style.scss */
 a {
   color: #009;
 }
 
-/* line 156, ../compass/sass/style.scss */
+/* line 163, ../compass/sass/style.scss */
 a:hover {
   text-decoration: none;
   color: #009;
